Update the repository to to fix several bugs
